# Dx12Utils

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: CMakeLists.txt  common.h  main.cpp  resolution.h  winapp.cpp  winapp.h
